2002/08/11 (THH):
  * Fixed bug in the blitter function, so the letters in the menu bar of the
    desktop are now correct.

2002-07-08 (THH):
  * Some more endianess patches for spec512 screens - looks much better now!
  * Fixed the bug that caused Hatari to crash when it was not able to load
    the font image.

2002-07-04 (THH):
  * Added experimental blitter emulation (taken from STonX).
    "Wings Of Death" started working now - wow!

2002-07-03 (THH):
  * Separated SDL_INIT_JOYSTICK and SDL_INIT_AUDIO from Main_Init(), since
    failures during joystick/audio initialization shouldn't be fatal.
  * Short-Cuts now also work with the "apple" key on Mac OS X.
  * Some endianess patches for the spec512 convertion routine (but it is
    still not yet working right).

2002-02-21 (THH):
  * Fixed bug in tos.c - TOS 1.00 has been wrongly patched and did not work
    any more...

2002-02-18 (THH):  *** Version 0.20 ***
  * Setting the HD drives is now also included in the GUI.
  * Updated the readme.txt.

2002-02-05 (Thomas Huth):
  * Added Svens HD-image patch.
  * Yet another bugfix for BeOS (lseek again...)

2002-01-14 (Thomas Huth):
  * Added (real) joystick support.

2002-01-02 (Thomas Huth):
  * Fixed some problems with the CPU reset.
  * Updated the GUI.

2001-12-27 (Thomas Huth):
  * Finished the first working version of the GUI. Not yet perfect,
    but many things can now be configured there.
  * Mapped the GUI to the F12 key, quitting the program is now
    ALTGR-Q

2001-12-25 (Thomas Huth):
  * Cleaned up: Fixed many "FIXME"s, rewrote the splitpath and makepath
    functions, and moved the scandir and alphasort functions to file.c.
  * Improved the SDL-GUI.
  * Designed some dialogs and started working on a file selection dialog.

2001-12-21 (Thomas Huth):
  * Hatari now uses the SDL's relative mouse mode instead of absolut mode.
  * Removed the files view.c and statusbar.c (not really needed).

2001-12-10 (Thomas Huth):