@@ -1,3 +1,9 @@
+2002/09/21 (THH):
+  * Added YM and WAV sound recording (to hatari.ym or hatari.wav since the
+    GUI does not support editing strings yet).
+  * Introduced "System" setup dialog for configuring the ST hardware
+    (currently CPU and blitter).
+
 2002/08/11 (THH):
   * Fixed bug in the blitter function, so the letters in the menu bar of the
     desktop are now correct.
